feat(chat): add toggle button for chat log and improve i18n support
- Add collapsible chat log functionality with toggle button
- Enhance i18n support for game messages and chat
- Improve leave game confirmation flow with localized messages
- Update UI layout for better mobile responsiveness

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,13 +32,14 @@
   "start_game_button_count": "Start Game ({{count}})",
   "start_game_button_waiting": "Need more players",
   "leave_game_button": "Leave",
+  "confirm_leave_general": "Are you sure you want to leave the room?",
+  "confirm_leave_game_loss": "If you leave now, it will be counted as a loss. Are you sure?",
   "log_title": "Log / Chat",
   "chat_placeholder": "Type a message...",
-  "trump_label": "Trump:",
-  "deck_cards_label": "In deck:",
-  "your_turn_attack": "Your turn: Attack!",
-  "your_turn_defend": "Your turn: Defend!",
-  "opponent_turn": "Opponent's turn...",
+  "trump_card_display": "Trump: {{- suit}}",
+  "turn_status_attack": "Your turn: Attack!",
+  "turn_status_defend": "Your turn: Defend!",
+  "turn_status_opponent": "Opponent's turn...",
   "you_are_player": "You:",
   "pass_button": "Pass",
   "take_button": "Take",
@@ -66,17 +67,19 @@
   "style_purple": "Purple",
   "style_gold": "Gold",
   "return_to_main_button": "Return to Main Menu",
-  "winner_message": "🎉 Victory! Winners: {{winners}} 🎉",
-  "loser_message": "😞 You lost. The Durak is: {{loser}}.",
-  "draw_message": "It's a draw!",
+  "you_in_winner_list": "YOU",
+  "winner_message_win": "🎉 Victory! Winners: {{winners}} 🎉",
+  "winner_message_lose": "😞 You lost. The Durak is: {{loser}}.",
+  "winner_message_draw": "It's a draw!",
   "game_over_reason": "{{reason}}",
+  "game_over_player_left": "Player {{player}} left the game. Game over.",
   "log_game_start": "Game started! Trump is {{trump}}. {{player}} attacks first.",
-  "log_attack": "{{player}} attacks with {{card}}.",
-  "log_toss": "{{player}} tosses in {{card}}.",
-  "log_defend": "{{player}} defends with {{card}}.",
-  "log_pass": "Pass. It's {{player}}'s turn to attack.",
-  "log_take": "{{player}} takes the cards.",
-  "log_draw_cards": "{{player}} draws {{count}} card(s).",
+  "log_attack": "{{name}} attacks with {{rank}}{{suit}}.",
+  "log_toss": "{{name}} tosses in {{rank}}{{suit}}.",
+  "log_defend": "{{name}} defends with {{rank}}{{suit}}.",
+  "log_pass": "Pass. It's {{name}}'s turn to attack.",
+  "log_take": "{{name}} takes the cards.",
+  "log_draw_cards": "{{name}} draws {{count}} card(s).",
   "log_reconnect": "{{player}} has reconnected!",
   "log_disconnect": "{{player}} disconnected. Waiting for reconnection...",
   "log_leave": "{{player}} left the game.",
