--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -32,13 +32,14 @@
   "start_game_button_count": "Почати гру ({{count}})",
   "start_game_button_waiting": "Потрібно більше гравців",
   "leave_game_button": "Вийти",
+  "confirm_leave_general": "Ви впевнені, що хочете вийти з кімнати?",
+  "confirm_leave_game_loss": "Якщо ви вийдете зараз, вам буде зараховано поразку. Ви впевнені?",
   "log_title": "Журнал / Чат",
   "chat_placeholder": "Написати в чат...",
-  "trump_label": "Козир:",
-  "deck_cards_label": "В колоді:",
-  "your_turn_attack": "Ваш хід: Атакуйте!",
-  "your_turn_defend": "Ваш хід: Відбивайтеся!",
-  "opponent_turn": "Хід супротивника...",
+  "trump_card_display": "Козир: {{- suit}}",
+  "turn_status_attack": "Ваш хід: Атакуйте!",
+  "turn_status_defend": "Ваш хід: Відбивайтеся!",
+  "turn_status_opponent": "Хід супротивника...",
   "you_are_player": "Ви:",
   "pass_button": "Відбій",
   "take_button": "Беру",
@@ -66,17 +67,19 @@
   "style_purple": "Фіолетова",
   "style_gold": "Золота",
   "return_to_main_button": "Повернутися на головну",
-  "winner_message": "🎉 Перемога! Переможці: {{winners}} 🎉",
-  "loser_message": "😞 Ви програли. Дурень: {{loser}}.",
-  "draw_message": "Нічия!",
+  "you_in_winner_list": "ВИ",
+  "winner_message_win": "🎉 Перемога! Переможці: {{winners}} 🎉",
+  "winner_message_lose": "😞 Ви програли. Дурень: {{loser}}.",
+  "winner_message_draw": "Нічия!",
   "game_over_reason": "{{reason}}",
+  "game_over_player_left": "Гравець {{player}} вийшов. Гру завершено.",
   "log_game_start": "Гра почалася! Козир: {{trump}}. Перший хід за {{player}}.",
-  "log_attack": "{{player}} атакує картою {{card}}.",
-  "log_toss": "{{player}} підкидає карту {{card}}.",
-  "log_defend": "{{player}} відбивається картою {{card}}.",
-  "log_pass": "Відбій. Хід переходить до {{player}}.",
-  "log_take": "{{player}} бере карти.",
-  "log_draw_cards": "{{player}} добирає {{count}} карт(и).",
+  "log_attack": "{{name}} атакує картою {{rank}}{{suit}}.",
+  "log_toss": "{{name}} підкидає карту {{rank}}{{suit}}.",
+  "log_defend": "{{name}} відбивається картою {{rank}}{{suit}}.",
+  "log_pass": "Відбій. Хід переходить до {{name}}.",
+  "log_take": "{{name}} бере карти.",
+  "log_draw_cards": "{{name}} добирає {{count}} карт(и).",
   "log_reconnect": "{{player}} повернувся в гру!",
   "log_disconnect": "{{player}} відключився. Очікуємо на перепідключення...",
   "log_leave": "{{player}} покинув гру.",
